# wraith

./: .gitignore  README.md  openapi.json  package-lock.json  package.json  typedoc.json
.github/workflows/: canary.yml  go-sdk.yml  load.yml  publish-python-sdk.yml  react-query-sdk.yml  typedoc.yml
clients/go/: README.md  go.mod
clients/go/accounts/: accounts.go  accounts_test.go
clients/go/assets/: assets.go  assets_test.go
clients/python/: .gitignore  README.md  pyproject.toml
clients/python/tests/: test_client.py
clients/python/wraith/: __init__.py  client.py  errors.py  models.py
clients/react-query/: README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
docs/cookbook/: portfolio.md
examples/portfolio-dashboard/: index.html  package.json
ops/canary/: config.yaml  deploy.sh  monitor.sh  promote.sh  rollback.sh
policies/: authz.rego  authz_test.rego
prisma/: schema.prisma
sql/: 001_ohlc_aggregates.sql
src/: api.ts  cli.ts  db.ts  index.ts  indexer.ts
src/__tests__/: checkpoint.test.ts  jsonapi.test.ts  ohlc.test.ts  opa.test.ts  retention.test.ts  sacDetect.test.ts
src/api/: accounts.ts  candles.ts  webhooks.ts
src/db/: router.ts
src/indexer/: checkpoint.ts  sac-detect.ts
src/ingest/: backfill.ts  reorg.ts
src/jobs/: retention.ts
src/middleware/: jsonapi.ts  opa.ts
src/openapi/: build.ts  schemas.ts  validation.ts
src/routes/: exports.ts  search.ts
src/workers/: ohlc-refresh.ts
tests/integration/: migrations.test.ts  reorg-rollover.test.ts  ws.test.ts
tests/load/: transfers.k6.js
(+37 files in other folders)
