[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wraith-py"
version = "0.1.0"
description = "Python client for the Wraith Soroban token transfer indexer REST API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Wraith contributors" }]
keywords = ["stellar", "soroban", "indexer", "wraith", "sep-41"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["requests>=2.25"]

[project.optional-dependencies]
dev = ["pytest>=7", "responses>=0.23", "build>=1.0", "twine>=4.0"]

[project.urls]
Homepage = "https://github.com/Miracle656/wraith"
Repository = "https://github.com/Miracle656/wraith"
Issues = "https://github.com/Miracle656/wraith/issues"

[tool.hatch.build.targets.wheel]
packages = ["wraith"]
